--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
     <script src="scripts/controllers/main_ctrl.js"></script>
     <script src="scripts/controllers/auth_ctrl.js"></script>
 
-    <title>Generic Angular</title>
+    <title>Eric Tang</title>
     <base href="/">
 
   </head>
@@ -43,7 +43,7 @@
     <my-footer></my-footer>
 
     <!-- Theme JavaScript -->
-    <script src="scripts/freelancer.js"></script>
+    <!-- <script src="scripts/freelancer.js"></script> -->
     <script id="dsq-count-scr" src="//tangcongyuan.disqus.com/count.js" async></script>
   </body>
 </html>
