Minor fix for navbar and custom view
Automatically scroll to the top of the view after drop down item being
clicked.

--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
   <body ng-app="angular-app" ng-controller="MainCtrl as main">
 
     <my-navbar></my-navbar>
-    <ui-view></ui-view>
+    <ui-view autoscroll="true"></ui-view>
     <my-footer></my-footer>
 
     <!-- Theme JavaScript -->
